feat: update demo video and disable autoplay

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relaycode | Turn LLM answers into code</title>
     <meta name="description" content="A CLI tool that turns any LLM answer into real code—built for solo devs.">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="6495939f-5b8f-4e91-824e-169c8e0d5fe6"></script>
   </head>
   <body>
     <div id="root"></div>
